--- a/mvpdemo/src/main/AndroidManifest.xml
+++ b/mvpdemo/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.MainActivity">
+        <activity android:name=".mvp.ui.activity.MainActivity">
 
         </activity>
-        <activity android:name=".ui.activity.LoginActivity">
+        <activity android:name=".mvp.ui.activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
