--- a/build.gradle
+++ b/build.gradle
@@ -21,3 +21,10 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+ext{
+    supportLibVersion = '25.1.0'
+    rxjava2Version = '2.0.8'
+    retrofit2Version = '2.2.0'
+    rxlifecycle='2.1.0'
+    gsonVersion = '2.8.0'
+}
