--- a/mvpdemo/build.gradle
+++ b/mvpdemo/build.gradle
@@ -27,23 +27,20 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    //引入okhttp
-    //引入retrofit
-    //引入rxjava
-    //引入Log拦截器，方便DEBUG模式输出log信息
-    //引入rxjava适配器，方便rxjava与retrofit的结合
-    //引入json转换器，方便将返回的数据转换为json格式
-    //引入rxandroid
+
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.squareup.okhttp3:okhttp:3.5.0'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.7'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
-    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'com.jakewharton:butterknife:7.0.1'
     testCompile 'junit:junit:4.12'
+
+    compile "io.reactivex.rxjava2:rxjava:$rootProject.ext.rxjava2Version"
+    compile "com.squareup.retrofit2:retrofit:$rootProject.ext.retrofit2Version"
+    compile "com.squareup.retrofit2:converter-gson:$rootProject.ext.retrofit2Version"
+    compile "com.squareup.retrofit2:adapter-rxjava2:$rootProject.ext.retrofit2Version"
+    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile "com.trello.rxlifecycle2:rxlifecycle:$rootProject.ext.rxlifecycle"
+    compile "com.trello.rxlifecycle2:rxlifecycle-components:$rootProject.ext.rxlifecycle"
+    compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:design:26.0.0-alpha1'
 }
