--- a/mvpdemo/build.gradle
+++ b/mvpdemo/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:design:26.0.0-alpha1'
+    compile project(':myutils')
 }
