沉浸式状态栏引入

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':app', ':mvpdemo', ':myutils'
+include ':app', ':mvpdemo', ':myutils', ':statusbarlibrary'
 include ':rsademo'
 include ':aesDemo'
