--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
-
+//greenDao依赖
+apply plugin: 'org.greenrobot.greendao'
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
@@ -17,6 +18,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    //在创建完实体类之后make project 存放greenDao  DB 的包位置
+    greendao {
+        schemaVersion 1
+        daoPackage 'com.yt.daydaystudy.greendao'//这个是生成代码保存的包名
+        targetGenDir 'src/main/java'//保存到java代码路径
+    }
 }
 
 dependencies {
@@ -24,9 +31,13 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile project(':myutils')
+    compile project(':statusbarlibrary')
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    compile project(':myutils')
-    compile project(':statusbarlibrary')
+    //greendao
+    compile 'org.greenrobot:greendao:3.2.2'
+    //?
+    compile 'org.greenrobot:greendao-generator:3.2.2'
 }
