--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,8 +21,8 @@ android {
     //在创建完实体类之后make project 存放greenDao  DB 的包位置
     greendao {
         schemaVersion 1
-        daoPackage 'com.yt.daydaystudy.greendao'//这个是生成代码保存的包名
-        targetGenDir 'src/main/java'//保存到java代码路径
+        daoPackage 'com.yt.daydaystudy.demo_greendao.greendao'
+        targetGenDir 'src/main/java'
     }
 }
 
