工作有点难找啊  心累

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,12 @@
             android:name=".demo_greendao.GreenDaoActivity"
             android:theme="@style/GreenDaoTheme" />
         <activity android:name=".test_diyview.DiyViewActivity" />
-        <activity android:name=".test_01.Main2Activity"></activity>
+        <activity android:name=".test_01.Main2Activity" />
+
+        <receiver
+            android:name=".test_diyview.MyReceiver"
+            android:enabled="true"
+            android:exported="true"></receiver>
     </application>
 
 </manifest>
