--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':app', ':demo_mvp', ':lib_utils', ':lib_statusbar', ':demo_oneactivity_multifragment'
+include ':app',  ':lib_utils', ':lib_statusbar', ':demo_oneactivity_multifragment'
 include ':demo_rsa'
 include ':demo_aes'
