--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':app',  ':lib_utils', ':lib_statusbar', ':demo_oneactivity_multifragment'
+include ':app',  ':lib_utils', ':lib_statusbar', ':demo_oneactivity_multifragment', ':demo_view'
 include ':demo_rsa'
 include ':demo_aes'
