--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,11 @@ dependencies {
 
     compile 'com.alibaba:arouter-api:1.3.1'
     annotationProcessor 'com.alibaba:arouter-compiler:1.1.4'
+    //rxjava
+    //RxJava的依赖包（我使用的最新版本）
+    compile 'io.reactivex.rxjava2:rxjava:2.0.1'
+    //RxAndroid的依赖包
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 }
 repositories {
     mavenCentral()
