--- a/demo_view/build.gradle
+++ b/demo_view/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:3.0.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
+    compile 'com.github.bmelnychuk:atv:1.2.9'
+    compile 'com.github.johnkil.print:print:1.3.1'
 }
