弘扬大神的树形列表demo 完成  牛逼

--- a/demo_view/src/main/AndroidManifest.xml
+++ b/demo_view/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".treeview.TreeViewActivity"></activity>
+        <activity android:name=".treeview.sf.TreeViewActivity"></activity>
+        <activity android:name=".treeview.zj.TreeViewActivity1"></activity>
     </application>
 
 </manifest>
