--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+apply from: "config.gradle"
 buildscript {
     ext.kotlin_version = '1.2.31'
     repositories {
@@ -31,11 +31,4 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
-}
-ext{
-    supportLibVersion = '25.1.0'
-    rxjava2Version = '2.0.8'
-    retrofit2Version = '2.2.0'
-    rxlifecycle='2.1.0'
-    gsonVersion = '2.8.0'
 }
