--- a/demo_kotlin/build.gradle
+++ b/demo_kotlin/build.gradle
@@ -2,16 +2,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 android {
-    compileSdkVersion 25
-    buildToolsVersion '26.0.2'
-
-
+    compileSdkVersion rootProject.ext.android.compileSdkVersion
     defaultConfig {
         applicationId "cn.yt.demo_kotlin"
-        minSdkVersion 16
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion rootProject.ext.android.minSdkVersion
+        targetSdkVersion rootProject.ext.android.targetSdkVersion
+        versionCode rootProject.ext.android.versionCode
+        versionName rootProject.ext.android.versionName
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -23,7 +20,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
+    // 自定义输出配置
+    android.applicationVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = "开眼_v${variant.versionName}_${variant.name}.apk"
+        }
+    }
 }
 
 dependencies {
@@ -31,34 +33,12 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:25.4.0'
-    testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.gyf.barlibrary:barlibrary:2.2.5'
-    implementation 'com.android.support:recyclerview-v7:25.4.0'
-    //引入okhttp
-    compile 'com.squareup.okhttp3:okhttp:3.5.0'
-    //引入retrofit
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    //引入rxjava
-    compile 'io.reactivex.rxjava2:rxjava:2.0.4'
-    //引入Log拦截器，方便DEBUG模式输出log信息
-    compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
-    //引入rxjava适配器，方便rxjava与retrofit的结合
-    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-    //引入json转换器，方便将返回的数据转换为json格式
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    //引入rxandroid
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    //flexbox
-    compile 'com.google.android:flexbox:0.3.0-alpha2'
-    //glide
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    implementation 'com.android.support:design:25.4.0'
-    compile 'com.shuyu:GSYVideoPlayer:1.6.8'
-    //rxdownload
-    compile 'zlc.season:rxdownload2:2.0.4'
 
+    //kotlin 支持库
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    // Support库
+    implementation rootProject.ext.supportLibs
+    //运行时权限
+    implementation'pub.devrel:easypermissions:1.2.0'
 
 }
