--- a/demo_kotlin/build.gradle
+++ b/demo_kotlin/build.gradle
@@ -40,5 +40,10 @@ dependencies {
     implementation rootProject.ext.supportLibs
     //运行时权限
     implementation'pub.devrel:easypermissions:1.2.0'
-
+    //多种状态view
+    implementation project(':multiple-status-view')
+    // 底部菜单
+    implementation('com.flyco.tablayout:FlycoTabLayout_Lib:2.1.0@aar') {
+        exclude group: 'com.android.support', module: 'support-v4'
+    }
 }
