--- a/demo_kotlin/build.gradle
+++ b/demo_kotlin/build.gradle
@@ -11,7 +11,9 @@ android {
         versionName rootProject.ext.android.versionName
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        // 实现毛玻璃那种透明的效果需要添加的库
+        renderscriptTargetApi 19
+        renderscriptSupportModeEnabled true    // Enable RS support
     }
 
     buildTypes {
@@ -46,4 +48,6 @@ dependencies {
     implementation('com.flyco.tablayout:FlycoTabLayout_Lib:2.1.0@aar') {
         exclude group: 'com.android.support', module: 'support-v4'
     }
+    //模糊透明 View
+    implementation 'com.github.mmin18:realtimeblurview:1.1.0'
 }
