--- a/demo_kotlin/src/main/AndroidManifest.xml
+++ b/demo_kotlin/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
+        android:name="com.hazz.kotlinmvp.GlobleApplication"
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_launcher"
         android:supportsRtl="true"
