--- a/demo_kotlin/build.gradle
+++ b/demo_kotlin/build.gradle
@@ -50,4 +50,9 @@ dependencies {
     }
     //模糊透明 View
     implementation 'com.github.mmin18:realtimeblurview:1.1.0'
+    //smartRefreshLayout 下拉刷新
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3'
+    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.3'
+    //Banner
+    implementation 'cn.bingoogolapple:bga-banner:2.2.4@aar'
 }
