--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,11 @@ apply from: "config.gradle"
 buildscript {
     ext.kotlin_version = '1.2.31'
     repositories {
+        google()
         jcenter()
         mavenCentral()
         maven {
-            url 'https://maven.google.com/'
-            name 'Google'
+            url "https://jitpack.io"
         }
     }
     dependencies {
@@ -21,10 +21,11 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
+        mavenCentral()
         maven {
-            url 'https://maven.google.com/'
-            name 'Google'
+            url "https://jitpack.io"
         }
     }
 }
