--- a/demo_kotlin/build.gradle
+++ b/demo_kotlin/build.gradle
@@ -55,4 +55,11 @@ dependencies {
     implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.3'
     //Banner
     implementation 'cn.bingoogolapple:bga-banner:2.2.4@aar'
+    // 网络请求库
+    implementation rootProject.ext.networkLibs
+    // RxJava2
+    implementation rootProject.ext.rxJavaLibs
+    implementation rootProject.ext.otherLibs
+    // APT dependencies(Kotlin内置的注解处理器)
+    kapt rootProject.ext.annotationProcessorLibs
 }
