--- a/demo_kotlin/build.gradle
+++ b/demo_kotlin/build.gradle
@@ -1,8 +1,18 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'  //kapt3插件
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
+
+    signingConfigs {
+        config{
+            keyAlias 'yt'
+            keyPassword '123456'
+            storeFile file('../ktdo.jks')
+            storePassword '123456'
+        }
+    }
     defaultConfig {
         applicationId "cn.yt.demo_kotlin"
         minSdkVersion rootProject.ext.android.minSdkVersion
@@ -11,15 +21,28 @@ android {
         versionName rootProject.ext.android.versionName
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
         // 实现毛玻璃那种透明的效果需要添加的库
         renderscriptTargetApi 19
         renderscriptSupportModeEnabled true    // Enable RS support
+
+        ndk {
+
+            //APP的build.gradle设置支持的SO库架构
+            abiFilters 'armeabi', 'armeabi-v7a', 'x86'
+        }
     }
 
     buildTypes {
+        debug{
+            minifyEnabled false
+            debuggable true
+        }
         release {
+            signingConfig signingConfigs.config
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            zipAlignEnabled true
         }
     }
     // 自定义输出配置
@@ -62,4 +85,12 @@ dependencies {
     implementation rootProject.ext.otherLibs
     // APT dependencies(Kotlin内置的注解处理器)
     kapt rootProject.ext.annotationProcessorLibs
+    //Logger
+    implementation 'com.orhanobut:logger:2.1.1'
+    // 视屏播放器
+    implementation 'com.shuyu:GSYVideoPlayer:2.1.1'
+    //GlideOkHttp
+    implementation(rootProject.ext.glideOkhttp) {
+        exclude group: 'glide-parent'
+    }
 }
