--- a/demo_kotlin/src/main/AndroidManifest.xml
+++ b/demo_kotlin/src/main/AndroidManifest.xml
@@ -43,6 +43,8 @@
         <activity android:name="com.practice.eyepetizer.mvp.ui.activity.PersonalHomepageActivity"/>
         <!--播放视频界面-->
         <activity android:name="com.practice.eyepetizer.mvp.ui.activity.VideoDetailActivity"/>
+        <!--搜索界面-->
+        <activity android:name="com.practice.eyepetizer.mvp.ui.activity.SearchActivity"/>
     </application>
 
 </manifest>
