--- a/demo_kotlin/build.gradle
+++ b/demo_kotlin/build.gradle
@@ -52,6 +52,14 @@ android {
             outputFileName = "开眼_v${variant.versionName}_${variant.name}.apk"
         }
     }
+
+    dexOptions {
+        jumboMode true
+    }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
